--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.codecentric.mule.modules</groupId>
 	<artifactId>repeat-until-successful-ff</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>mule-extension</packaging>
 	<name>Repeat-until-successfull-ff-module Extension</name>
 
@@ -47,7 +45,7 @@
 		<connection>scm:git:https://github.com/rbutenuth/repeat-until-successful-ff.git</connection>
 		<developerConnection>scm:git:https://github.com/rbutenuth/repeat-until-successful-ff.git</developerConnection>
 		<url>https://github.com/rbutenuth/repeat-until-successful-ff</url>
-		<tag>repeat-until-successful-0.1.0</tag>
+		<tag>repeat-until-successful-ff-1.0.0</tag>
 	</scm>
 	<distributionManagement>
 		<snapshotRepository>
