--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.codecentric.mule.modules</groupId>
 	<artifactId>repeat-until-successful-ff</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-extension</packaging>
 	<name>Repeat-until-successfull-ff-module Extension</name>
 
@@ -42,8 +42,8 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:git://github.com/rbutenuth/repeat-until-successful-ff.git</connection>
-		<developerConnection>scm:git:git://github.com/rbutenuth/repeat-until-successful-ff.git</developerConnection>
+		<connection>scm:git:git@github.com:rbutenuth/repeat-until-successful-ff.git</connection>
+		<developerConnection>scm:git:git@github.com:rbutenuth/repeat-until-successful-ff.git</developerConnection>
 		<url>https://github.com/rbutenuth/repeat-until-successful-ff</url>
 		<tag>repeat-until-successful-ff-1.0.0</tag>
 	</scm>
