--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:git@github.com:rbutenuth/repeat-until-successful-ff.git</connection>
-		<developerConnection>scm:git:git@github.com:rbutenuth/repeat-until-successful-ff.git</developerConnection>
+		<connection>scm:git:ssh://github.com:rbutenuth/repeat-until-successful-ff.git</connection>
+		<developerConnection>scm:git:ssh:github.com:rbutenuth/repeat-until-successful-ff.git</developerConnection>
 		<url>https://github.com/rbutenuth/repeat-until-successful-ff</url>
 		<tag>repeat-until-successful-ff-1.0.0</tag>
 	</scm>
