--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:git@github.com:rbutenuth/repeat-until-successful-ff.git</connection>
-		<developerConnection>scm:git:git@github.com:rbutenuth/repeat-until-successful-ff.git</developerConnection>
-		<url>scm:git:git@github.com:rbutenuth/repeat-until-successful-ff.git</url>
+		<connection>scm:git:git://github.com:rbutenuth/repeat-until-successful-ff.git</connection>
+		<developerConnection>scm:git:git://github.com:rbutenuth/repeat-until-successful-ff.git</developerConnection>
+		<url>scm:git:git://github.com:rbutenuth/repeat-until-successful-ff.git</url>
 		<tag>repeat-until-successful-ff-1.0.0</tag>
 	</scm>
 	<distributionManagement>
