--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.codecentric.mule.modules</groupId>
 	<artifactId>repeat-until-successful-ff</artifactId>
-	<version>1.1.0</version>
+	<version>1.1.1-SNAPSHOT</version>
 	<packaging>mule-extension</packaging>
 	<name>Repeat-until-successfull-ff-module Extension</name>
 
@@ -43,7 +43,7 @@
 
 	<scm>
 		<connection>scm:git:git@github.com:rbutenuth/repeat-until-successful-ff.git</connection>
-		<tag>repeat-until-successful-ff-1.1.0</tag>
+		<tag>repeat-until-successful-ff-1.0.0</tag>
 	</scm>
 
 	<distributionManagement>
