--- a/pom.xml
+++ b/pom.xml
@@ -4,25 +4,33 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.codecentric.mule.modules</groupId>
 	<artifactId>repeat-until-successful-ff</artifactId>
-	<version>1.1.2-SNAPSHOT</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<packaging>mule-extension</packaging>
 	<name>Repeat-until-successfull-ff-module Extension</name>
 
 	<parent>
 		<groupId>org.mule.extensions</groupId>
 		<artifactId>mule-modules-parent</artifactId>
-		<version>1.1.3</version>
+		<version>1.6.3</version>
 	</parent>
 
 	<properties>
 		<java-version>1.8</java-version>
-		<build.plugin.cobertura.version>2.7</build.plugin.cobertura.version>
 		<category>Community</category>
 		<licensePath>LICENSE.md</licensePath>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<build.plugin.cobertura.version>2.7</build.plugin.cobertura.version>
 		<project.scm.id>GitHub</project.scm.id>
 		<dependency.locations.enabled>false</dependency.locations.enabled>
+		<cobertura-maven-plugin-version>2.7</cobertura-maven-plugin-version>
+		<maven-compiler-plugin-version>3.13.0</maven-compiler-plugin-version>
+		<munit-extensions-maven-plugin-version>1.3.1</munit-extensions-maven-plugin-version>
+		<maven-javadoc-plugin-version>3.7.0</maven-javadoc-plugin-version>
+		<maven-gpg-plugin-version>3.2.4</maven-gpg-plugin-version>
+		<maven-source-plugin-version>3.3.1</maven-source-plugin-version>
+		<maven-release-plugin-version>3.1.1</maven-release-plugin-version>
+		<maven-site-plugin-version>3.12.1</maven-site-plugin-version>
+		<maven-project-info-reports-plugin-version>3.6.2</maven-project-info-reports-plugin-version>
+		<nexus-staging-maven-plugin-version>1.7.0</nexus-staging-maven-plugin-version>
 	</properties>
 
 	<developers>
@@ -66,10 +74,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.10.4</version>
-						<configuration>
-							<!-- <excludePackageNames>de.codecentric.mule.assertobjectequals.generated.*</excludePackageNames> -->
-						</configuration>
+						<version>${maven-javadoc-plugin-version}</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -91,7 +96,7 @@
 								</goals>
 							</execution>
 						</executions>
-						<version>1.5</version>
+						<version>${maven-gpg-plugin-version}</version>
 					</plugin>
 				</plugins>
 			</build>
@@ -101,9 +106,14 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>com.mulesoft.munit</groupId>
+				<artifactId>munit-extensions-maven-plugin</artifactId>
+				<version>${munit-extensions-maven-plugin-version}</version>
+		    </plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
 					<source>${java-version}</source>
 					<target>${java-version}</target>
@@ -113,37 +123,22 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.7</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>ossrh</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>${build.plugin.cobertura.version}</version>
-				<configuration>
-					<format>html</format>
-					<maxmem>256m</maxmem>
-					<aggregate>false</aggregate>
-					<check />
-					<instrumentation>
-						<excludes>
-							<exclude>de/codecentric/mule/assertobjectequals/generated/**</exclude>
-							<exclude>org/mule/tooling/ui/contribution/**</exclude>
-						</excludes>
-					</instrumentation>
-				</configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven-source-plugin-version}</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
+				<version>${maven-release-plugin-version}</version>
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<useReleaseProfile>false</useReleaseProfile>
@@ -156,12 +151,62 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.3</version>
+				<version>${maven-site-plugin-version}</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>2.7</version>
+				<version>${maven-project-info-reports-plugin}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>${nexus-staging-maven-plugin-version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura-maven-plugin-version}</version>
+				<configuration>
+					<format>html</format>
+					<maxmem>256m</maxmem>
+					<aggregate>false</aggregate>
+					<check />
+					<instrumentation>
+						<excludes>
+							<exclude>org/mule/tooling/ui/contribution/**</exclude>
+						</excludes>
+					</instrumentation>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>${maven-release-plugin-version}</version>
+				<configuration>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<useReleaseProfile>false</useReleaseProfile>
+					<releaseProfiles>release</releaseProfiles>
+					<goals>deploy</goals>
+					<localCheckout>true</localCheckout>
+					<pushChanges>false</pushChanges>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>${maven-site-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>${maven-project-info-reports-plugin-version}</version>
 			</plugin>
 		</plugins>
 	</build>
@@ -175,7 +220,7 @@
 		<dependency>
 			<groupId>org.mule.module</groupId>
 			<artifactId>mule-java-module</artifactId>
-			<version>1.2.10</version>
+			<version>1.2.13</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
